--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-# PORT=5000
-# DB_NAME=freelancer_bek
-# DB_USER=postgres
-# DB_PASSWORD=9Mf8rWKRUi9hfQU
-# DB_HOST=localhost
-# DB_PORT=5432
-# SECRET_KEY=random_secret_key
-
 PORT=5000
-DB_NAME=verceldb
-DB_USER=default
-DB_PASSWORD=tNEY9j7faibJ
-DB_HOST=ep-floral-glade-a4bzqgus-pooler.us-east-1.aws.neon.tech
+DB_NAME=freelancer_bek
+DB_USER=postgres
+DB_PASSWORD=9Mf8rWKRUi9hfQU
+DB_HOST=localhost
 DB_PORT=5432
 SECRET_KEY=random_secret_key
+
+# PORT=5000
+# DB_NAME=verceldb
+# DB_USER=default
+# DB_PASSWORD=tNEY9j7faibJ
+# DB_HOST=ep-floral-glade-a4bzqgus-pooler.us-east-1.aws.neon.tech
+# DB_PORT=5432
+# SECRET_KEY=random_secret_key
